// Vitest Snapshot v1

exports[`fluide:build > builds out fluide.liquid snippet file for production 1`] = `
"{% # theme-check-disable %}
{% comment %}
  IMPORTANT: This snippet is automatically generated by Astra.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = fluide | replace: '~/', './' | replace: '@/', './' %}
{% if path == \\"/test/__fixtures__/src/base.css\\" or path == \\"base.css\\" %}
  {{ 'base.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload }}
{% elsif path == \\"/test/__fixtures__/src/index.ts\\" or path == \\"index.ts\\" %}
  <link rel=\\"modulepreload\\" href=\\"{{ 'index.js' | asset_url | split: '?' | first }}\\" crossorigin=\\"anonymous\\">
  <script src=\\"{{ 'index.js' | asset_url | split: '?' | first }}\\" type=\\"module\\" crossorigin=\\"anonymous\\"></script>
{% endif %}
"
`;

exports[`fluide:build > builds out fluide.liquid snippet file with hashing 1`] = `
"{% # theme-check-disable %}
{% comment %}
  IMPORTANT: This snippet is automatically generated by Astra.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = fluide | replace: '~/', './' | replace: '@/', './' %}
{% if path == \\"/test/__fixtures__/src/base.css\\" or path == \\"base.css\\" %}
  {{ 'base-b66319a3.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload }}
{% elsif path == \\"/test/__fixtures__/src/index.ts\\" or path == \\"index.ts\\" %}
  <link rel=\\"modulepreload\\" href=\\"{{ 'index-b27101c4.js' | asset_url | split: '?' | first }}\\" crossorigin=\\"anonymous\\">
  <script src=\\"{{ 'index-b27101c4.js' | asset_url | split: '?' | first }}\\" type=\\"module\\" crossorigin=\\"anonymous\\"></script>
{% endif %}
"
`;
